weather app finished

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   /* background: rgb(145, 63, 251);
   background: linear-gradient(
     90deg,
@@ -6,8 +6,8 @@ body {
     rgba(252, 70, 187, 1) 100%
   ); */
 
-  background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
-}
+  /* background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+} */ 
 
 .heading {
   font-family: sans-serif;
