--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,13 +1,13 @@
-/* body {
-  /* background: rgb(145, 63, 251);
+ body {
+   background: rgb(145, 63, 251);
   background: linear-gradient(
     90deg,
     rgba(145, 63, 251, 1) 0%,
     rgba(252, 70, 187, 1) 100%
-  ); */
+  ); 
 
-  /* background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
-} */ 
+   /* background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%); */
+} 
 
 .heading {
   font-family: sans-serif;
